fix: GROW-568 Alignment issue

--- a/src/component/MyAccountOverlay/MyAccountOverlay.style.scss
+++ b/src/component/MyAccountOverlay/MyAccountOverlay.style.scss
@@ -1029,6 +1029,7 @@
         border-right: none;
         border-bottom: none;
         border-left: none;
+        text-align: left;
         .CountryMiniFlag {
           &-Container {
             margin-bottom: -36px;
@@ -1122,6 +1123,7 @@
         border-right: none;
         border-bottom: none;
         border-left: none;
+        text-align: left;
         .CountryMiniFlag {
           &-Container {
             margin-bottom: -36px;
